--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class='hero'>
             <div class='container'>
                 <h1 class='hero-title'>Effective Solutions for Your Business</h1>
-                <button type='button' data-modal-open='My modal' class='hero-button'>Order Service</button>
+                <button type='button' data-modal-open class='hero-button'>Order Service</button>
             </div>
         </section>
 
@@ -64,7 +64,7 @@
                     <li class='advantages-list-item list'>
                         <div class='advantages-container-icons'>
                             <svg class='advantages-icons' width='64' height='64'>
-                                <use href='./images/icons.svg#icon-antenna-1-1'></use>
+                                <use href='./images/icons.svg#icon-antenna'></use>
                             </svg>
                         </div>
                         <h3 class='advantages-subtitle'>Strategy</h3>
@@ -74,7 +74,7 @@
                     <li class='advantages-list-item list'>
                         <div class='advantages-container-icons'>
                             <svg class='advantages-icons' width='64' height='64'>
-                                <use href='./images/icons.svg#icon-clock-1'></use>
+                                <use href='./images/icons.svg#icon-clock'></use>
                             </svg>
                         </div>
                         <h3 class='advantages-subtitle'>Punctuality</h3>
@@ -84,7 +84,7 @@
                     <li class='advantages-list-item list'>
                         <div class='advantages-container-icons'>
                             <svg class='advantages-icons' width='64' height='64'>
-                                <use href='./images/icons.svg#icon-diagram-1'></use>
+                                <use href='./images/icons.svg#icon-diagram'></use>
                             </svg>
                         </div>
                         <h3 class='advantages-subtitle'>Diligence</h3>
@@ -94,7 +94,7 @@
                     <li class='advantages-list-item list'>
                         <div class='advantages-container-icons'>
                             <svg class='advantages-icons' width='64' height='64'>
-                                <use href='./images/icons.svg#icon-astronaut-1'></use>
+                                <use href='./images/icons.svg#icon-astronaut'></use>
                             </svg>
                         </div>
                         <h3 class='advantages-subtitle'>Technologies</h3>
@@ -135,28 +135,28 @@
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                            <use href='./images/icons.svg#icon-instagram'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-twitter-1'></use>
+                                            <use href='./images/icons.svg#icon-twitter'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                            <use href='./images/icons.svg#icon-facebook'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                            <use href='./images/icons.svg#icon-linkedin'></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -172,28 +172,28 @@
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                            <use href='./images/icons.svg#icon-instagram'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-twitter-1'></use>
+                                            <use href='./images/icons.svg#icon-twitter'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                            <use href='./images/icons.svg#icon-facebook'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                            <use href='./images/icons.svg#icon-linkedin'></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -209,28 +209,28 @@
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                            <use href='./images/icons.svg#icon-instagram'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-twitter-1'></use>
+                                            <use href='./images/icons.svg#icon-twitter'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                            <use href='./images/icons.svg#icon-facebook'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                            <use href='./images/icons.svg#icon-linkedin'></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -246,28 +246,28 @@
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                            <use href='./images/icons.svg#icon-instagram'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-twitter-1'></use>
+                                            <use href='./images/icons.svg#icon-twitter'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                            <use href='./images/icons.svg#icon-facebook'></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class='team-socials-item list'>
                                     <a href="" class='team-socials-link'>
                                         <svg class='team-icons' width='16' height='16'>
-                                            <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                            <use href='./images/icons.svg#icon-linkedin'></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -285,42 +285,44 @@
                     <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
-                                <use href='./images/icons.svg#icon-Logo'></use>
+                                <use href='./images/icons.svg#icon-logo-1'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
-                                <use href='./images/icons.svg#icon-Logo-1'></use>
+                                <use href='./images/icons.svg#icon-logo-2'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
-                                <use href='./images/icons.svg#icon-Logo-2'></use>
+                                <use href='./images/icons.svg#icon-logo-3'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
-                                <use href='./images/icons.svg#icon-Vector-1'></use>
+                                <use href='./images/icons.svg#icon-vector-1'></use>
+                                <use href='./images/icons.svg#icon-vector-2'></use>
+                                <use href='./images/icons.svg#icon-vector-3'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
-                                <use href='./images/icons.svg#icon-Logo-3'></use>
+                                <use href='./images/icons.svg#icon-logo-5'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
-                                <use href='./images/icons.svg#icon-Logo-4'></use>
+                                <use href='./images/icons.svg#icon-logo-6'></use>
                             </svg>
                         </a>
                     </li>
@@ -343,28 +345,28 @@
                     <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
-                                <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                <use href='./images/icons.svg#icon-instagram'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
-                                <use href='./images/icons.svg#icon-twitter-1'></use>
+                                <use href='./images/icons.svg#icon-twitter'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
-                                <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                <use href='./images/icons.svg#icon-facebook'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
-                                <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                <use href='./images/icons.svg#icon-linkedin'></use>
                             </svg>
                         </a>
                     </li>
@@ -373,11 +375,11 @@
         </div>
     </footer>
     <!-- -------------------------------------modal----------------------- -->
-    <div data-modal class='modal is-hidden'>
-        <div class='modal-window'>
+    <div class='backdrop is-hidden' data-modal>
+        <div class='modal'>
             <button type='button' data-modal-close class='modal-button'>
                 <svg class='modal-button-icons' width='8' height='8'>
-                    <use href='./images/icons.svg#Ellipse 1'></use>
+                    <use href='./images/icons.svg#icon-close-black-18'></use>
                 </svg>
             </button>
         </div>
