--- a/portfolio.html
+++ b/portfolio.html
@@ -262,28 +262,28 @@
                     <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
-                                <use href='./images/icons.svg#icon-instagram-2-1'></use>
+                                <use href='./images/icons.svg#icon-instagram'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
-                                <use href='./images/icons.svg#icon-twitter-1'></use>
+                                <use href='./images/icons.svg#icon-twitter'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
-                                <use href='./images/icons.svg#icon-facebook-1-1'></use>
+                                <use href='./images/icons.svg#icon-facebook'></use>
                             </svg>
                         </a>
                     </li>
                     <li class='footer-socials-item list'>
                         <a href="" class='footer-list-link'>
                             <svg class='footer-icons' width='24' height='24'>
-                                <use href='./images/icons.svg#icon-linkedin-1-1'></use>
+                                <use href='./images/icons.svg#icon-linkedin'></use>
                             </svg>
                         </a>
                     </li>
