--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     <li class='customers-list-item list'>
                         <a href="" class='customers-list-link'>
                             <svg class='customers-icons' width='104' height='56'>
-                                <use href='./images/icons.svg#icon-vector-1-2-3'></use>
+                                <use href='./images/icons.svg#icon-logo-4'></use>
                             </svg>
                         </a>
                     </li>
